[build-system]
requires = [
    "hatchling",
    "scikit-learn",
    "numpy",
    "torch",
    "pandas",
    "lifelines",
    "xgboost"
    ]
build-backend = "hatchling.build"

[project]
name = "SurvAI"
version = "0.0.1"
authors = [
  { name="Henry Musto", email="musto101@gmail.com" },
]
description = "A package containing a collection of survival-based AI models and tools."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/musto101/SurvAI"
Issues = "https://github.com/musto101/SurvAI/issues"